--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# audio files
+/public/audio/*.mp3
+/public/audio/*.wav
+/public/audio/*.ogg
+!/public/audio/.gitkeep
