--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@stripe/stripe-js": "^8.5.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "edge-tts": "^1.0.1",
     "framer-motion": "^12.23.24",
+    "gtts": "^0.2.1",
     "lucide-react": "^0.555.0",
     "mime": "^4.1.0",
     "next": "16.0.5",
